--- a/index.html
+++ b/index.html
@@ -33,56 +33,59 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2024 season</a>
 <ul>
+<li><a href="#rd16-italian-grand-prix"
+id="toc-rd16-italian-grand-prix"><span
+class="toc-section-number">1.1</span> Rd16 Italian Grand Prix</a></li>
 <li><a href="#rd15-dutch-grand-prix"
 id="toc-rd15-dutch-grand-prix"><span
-class="toc-section-number">1.1</span> Rd15 Dutch Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd15 Dutch Grand Prix</a></li>
 <li><a href="#rd14-belgian-grand-prix"
 id="toc-rd14-belgian-grand-prix"><span
-class="toc-section-number">1.2</span> Rd14 Belgian Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd14 Belgian Grand Prix</a></li>
 <li><a href="#rd13-hungarian-grand-prix"
 id="toc-rd13-hungarian-grand-prix"><span
-class="toc-section-number">1.3</span> Rd13 Hungarian Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd13 Hungarian Grand Prix</a></li>
 <li><a href="#rd12-british-grand-prix"
 id="toc-rd12-british-grand-prix"><span
-class="toc-section-number">1.4</span> Rd12 British Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd12 British Grand Prix</a></li>
 <li><a href="#rd11-austrian-grand-prix"
 id="toc-rd11-austrian-grand-prix"><span
-class="toc-section-number">1.5</span> Rd11 Austrian Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd11 Austrian Grand Prix</a></li>
 <li><a href="#rd10-spanish-grand-prix"
 id="toc-rd10-spanish-grand-prix"><span
-class="toc-section-number">1.6</span> Rd10 Spanish Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd10 Spanish Grand Prix</a></li>
 <li><a href="#rd09-canadian-grand-prix"
 id="toc-rd09-canadian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd09 Canadian Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd09 Canadian Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
-class="toc-section-number">1.8</span> Rd08 Monaco Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.9</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.10</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.10</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.11</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-chinese-grand-prix"
 id="toc-rd05-chinese-grand-prix"><span
-class="toc-section-number">1.11</span> Rd05 Chinese Grand Prix</a></li>
+class="toc-section-number">1.12</span> Rd05 Chinese Grand Prix</a></li>
 <li><a href="#rd04-japanese-grand-prix"
 id="toc-rd04-japanese-grand-prix"><span
-class="toc-section-number">1.12</span> Rd04 Japanese Grand Prix</a></li>
+class="toc-section-number">1.13</span> Rd04 Japanese Grand Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.13</span> Rd03 Australian Grand
+class="toc-section-number">1.14</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.14</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.15</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.15</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.16</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.16</span> Pre-season test</a></li>
+class="toc-section-number">1.17</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#previous-season" id="toc-previous-season"><span
 class="toc-section-number">2</span> Previous season</a></li>
@@ -90,8 +93,17 @@ class="toc-section-number">2</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2024 season</h1>
-<h2 data-number="1.1" id="rd15-dutch-grand-prix"><span
-class="header-section-number">1.1</span> Rd15 Dutch Grand Prix</h2>
+<h2 data-number="1.1" id="rd16-italian-grand-prix"><span
+class="header-section-number">1.1</span> Rd16 Italian Grand Prix</h2>
+<p><a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd15-dutch-grand-prix"><span
+class="header-section-number">1.2</span> Rd15 Dutch Grand Prix</h2>
 <p><a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -124,8 +136,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd15-Dutch-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.2" id="rd14-belgian-grand-prix"><span
-class="header-section-number">1.2</span> Rd14 Belgian Grand Prix</h2>
+<h2 data-number="1.3" id="rd14-belgian-grand-prix"><span
+class="header-section-number">1.3</span> Rd14 Belgian Grand Prix</h2>
 <p><a href="./2024/2024-Rd14-Belgian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -161,8 +173,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd14-Belgian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd13-hungarian-grand-prix"><span
-class="header-section-number">1.3</span> Rd13 Hungarian Grand Prix</h2>
+<h2 data-number="1.4" id="rd13-hungarian-grand-prix"><span
+class="header-section-number">1.4</span> Rd13 Hungarian Grand Prix</h2>
 <p><a href="./2024/2024-Rd13-Hungarian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -200,8 +212,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd13-Hungarian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd12-british-grand-prix"><span
-class="header-section-number">1.4</span> Rd12 British Grand Prix</h2>
+<h2 data-number="1.5" id="rd12-british-grand-prix"><span
+class="header-section-number">1.5</span> Rd12 British Grand Prix</h2>
 <p><a href="./2024/2024-Rd12-British-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -237,8 +249,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd12-British-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd11-austrian-grand-prix"><span
-class="header-section-number">1.5</span> Rd11 Austrian Grand Prix</h2>
+<h2 data-number="1.6" id="rd11-austrian-grand-prix"><span
+class="header-section-number">1.6</span> Rd11 Austrian Grand Prix</h2>
 <p><a href="./2024/2024-Rd11-Austrian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -279,8 +291,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd11-Austrian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd10-spanish-grand-prix"><span
-class="header-section-number">1.6</span> Rd10 Spanish Grand Prix</h2>
+<h2 data-number="1.7" id="rd10-spanish-grand-prix"><span
+class="header-section-number">1.7</span> Rd10 Spanish Grand Prix</h2>
 <p><a href="./2024/2024-Rd10-Spanish-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -316,8 +328,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd10-Spanish-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd09-canadian-grand-prix"><span
-class="header-section-number">1.7</span> Rd09 Canadian Grand Prix</h2>
+<h2 data-number="1.8" id="rd09-canadian-grand-prix"><span
+class="header-section-number">1.8</span> Rd09 Canadian Grand Prix</h2>
 <p><a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -354,8 +366,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd09-Canadian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd08-monaco-grand-prix"><span
-class="header-section-number">1.8</span> Rd08 Monaco Grand Prix</h2>
+<h2 data-number="1.9" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.9</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -388,8 +400,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.9" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.9</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.10" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.10</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -437,8 +449,8 @@ href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.10</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.11" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.11</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -475,8 +487,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.11" id="rd05-chinese-grand-prix"><span
-class="header-section-number">1.11</span> Rd05 Chinese Grand Prix</h2>
+<h2 data-number="1.12" id="rd05-chinese-grand-prix"><span
+class="header-section-number">1.12</span> Rd05 Chinese Grand Prix</h2>
 <p><a href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -516,8 +528,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd05-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.12" id="rd04-japanese-grand-prix"><span
-class="header-section-number">1.12</span> Rd04 Japanese Grand Prix</h2>
+<h2 data-number="1.13" id="rd04-japanese-grand-prix"><span
+class="header-section-number">1.13</span> Rd04 Japanese Grand Prix</h2>
 <p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -555,8 +567,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.13" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.13</span> Rd03 Australian Grand
+<h2 data-number="1.14" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.14</span> Rd03 Australian Grand
 Prix</h2>
 <p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
@@ -595,8 +607,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd03-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.14</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.15" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.15</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -644,8 +656,8 @@ href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.15" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.15</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.16" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.16</span> Rd01 Bahrain Grand Prix</h2>
 <p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -681,8 +693,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.16" id="pre-season-test"><span
-class="header-section-number">1.16</span> Pre-season test</h2>
+<h2 data-number="1.17" id="pre-season-test"><span
+class="header-section-number">1.17</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
 PDF</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_laptime.csv">Day1: laptime
