--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@ href="./2024/2024-Rd18-Singapore-Grand-Prix-Qualifying_laptime.csv">Q:
 laptime csv</a><br />
 <a href="./2024/2024-Rd18-Singapore-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd18-Singapore-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd18-Singapore-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd18-Singapore-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd18-Singapore-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd17-azerbaijan-grand-prix"><span
 class="header-section-number">1.2</span> Rd17 Azerbaijan Grand Prix</h2>
 <p><a href="./2024/2024-Rd17-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:
