--- a/index.html
+++ b/index.html
@@ -125,6 +125,26 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd19-United-States-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a
+href="./2024/2024-Rd19-United-States-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd19-United-States-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a
+href="./2024/2024-Rd19-United-States-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a
+href="./2024/2024-Rd19-United-States-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
+<p><a href="./2024/2024-Rd19-United-States-Grand-Prix-Qualifying.pdf">Q:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd19-United-States-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd19-United-States-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd18-singapore-grand-prix"><span
 class="header-section-number">1.2</span> Rd18 Singapore Grand Prix</h2>
 <p><a href="./2024/2024-Rd18-Singapore-Grand-Prix-Practice-1.pdf">FP1:
